fixed roomname overflow prop

--- a/packages/room/room-name.scss
+++ b/packages/room/room-name.scss
@@ -5,7 +5,10 @@
   top: 4px;
   left:4px;
 
+  overflow: hidden;
+
   width: 108.75px;
+  height: 24px;
   padding: 0 2px;
 
   cursor: pointer;
